--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,20 @@ services:
   app_domburi:
     build:
       dockerfile: ./Dockerfile
+    command:
+      - "gunicorn",
+      - "domburi.wsgi:application",
+      - "--bind",
+      - "0.0.0.0:8000"
     ports:
-      - "8000:8080"
-  
-  grafana:
-    image: grafana/grafana:9.2.15
-    environment:
-      - GF_AUTH_ANONYMOUS_ENABLED=true
-      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
-    ports:
-      - "3000:3000"
-
-  loki:
-    image: grafana/loki:2.8.0
-    ports:
-      - "3100:3100"
+      - "8000:8000"
+    restart: always
+    env_file:
+      - .env
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "10"
+        max-size: "200k"
+    volumes:
+      - ./domburi/database:/app/domburi_django_app/database
