--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DJANGO_LOGLEVEL=INFO
-DJANGO_SECRET_KEY=J8ufd9sjJ(J*8fjasJ(SJk9fdjw9jqW(FJ9j9jwefjw9j)
+DJANGO_SECRET_KEY="django-insecure-k8+48&01ug9ph!txk%o_$*m*_n#h&*cpn@o_qg1&w)g896m!iz"
 DJANGO_DEBUG=1
 DJANGO_ALLOWED_HOSTS=
